--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Contributors
 * topdeck (http://bitbucket.org/topdeck)
 * samueltardieu (http://bitbucket.org/samueltardieu)
 * chevox (https://bitbucket.org/chexov)
+* the01 (https://github.com/the01)
